feat(docs): synchronize backend READMEs with codebase
This commit updates all `README.md` files within the `backend` directory to accurately reflect the current state of the application's architecture and implementation.

Key changes include:
- Correcting the architectural diagrams in several modules.
- Clarifying the responsibilities of service-only modules like `competencia` and data-model-only modules like `unidade` and `conhecimento`.
- Updating API endpoint documentation to match the current controller implementations.
- Refining descriptions of the event-driven flow and the roles of key components like facades and listeners.
- Fixing minor typos and inconsistencies across all documentation.